--- a/index.html
+++ b/index.html
@@ -6,10 +6,74 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+  <!-- Custom CSS -->
+  <link rel="stylesheet" href="css/style.css">
   <title>FCC - Survey Form Challenge</title>
 </head>
 <body>
-  
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+  <h1 id="title">Survey Form</h1>
+  <div class="container">
+    <p id="description">Let us know what Content Management System (CMS) application are you using.</p>
+    <form id="survey-form">
+      <div class="row">
+        <div class="col col-left"><label for="name" id="name-label">* Name:</label></div>
+        <div class="col col-right"><input type="text" class="form-control" id="name" placeholder="Enter your Name" required></div>
+      </div>
+      <div class="row">
+        <div class="col col-left"><label for="email" id="email-label">* Email:</label></div>
+        <div class="col col-right"><input type="email" class="form-control" id="email" placeholder="Enter your Email" required></div>
+      </div>
+      <div class="row">
+        <div class="col col-left"><label for="number" id="number-label">* Age:</label></div>
+        <div class="col col-right"><input type="number" class="form-control" id="number" min="1" max="120" placeholder="Age" required></div>
+      </div>
+      <div class="row">
+        <div class="col col-left"><label for="dropdown" id="dropdown-label">What type of CMS do you use?</label></div>
+        <div class="col">
+          <select class="form-control" id="dropdown" name="cms">
+            <option>None</option>
+            <option>Web Content Management System</option>
+            <option>Enterprise Content Managent System</option>
+            <option>Document Management System</option>
+            <option>Transactional Content Management System</option>
+            <option>Integrated Content Management System</option>
+            <option>Publications Content Management System</option>
+            <option>Learning Content Management System</option>
+          </select>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col col-left"><label for="dropdown" id="requirement-label">What is the first technical requirement do you have in mind when choosing a CMS?</label></div>
+        <div class="col col-right">
+          <div><input type="radio" name="requirement" value="os"> <label for="" id="">OS</label></div>
+          <div><input type="radio" name="requirement" value="web server"> <label for="" id="">Web Server</label></div>
+          <div><input type="radio" name="requirement" value="programming language"> <label for="" id="">Programming Language</label></div>
+          <div><input type="radio" name="requirement" value="database"> <label for="" id="">Database</label></div>
+          <div><input type="radio" name="requirement" value="application server"> <label for="" id="">Application Server</label></div>
+          <div><input type="radio" name="requirement" value="license"> <label for="" id="">License</label></div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col col-left"><label for="dropdown" id="dropdown-label">Which features are more relevant when choosing a cms? (Check all that apply):</label></div>
+        <div class="col col-right">
+          <div><input type="checkbox" name="name" value="os"> <label for="" id="">Security</label></div>
+          <div><input type="checkbox" name="name" value="web server"> <label for="" id="">Performance</label></div>
+          <div><input type="checkbox" name="name" value="programming language"> <label for="" id="">Support</label></div>
+          <div><input type="checkbox" name="name" value="database"> <label for="" id="">Built-In Features</label></div>
+          <div><input type="checkbox" name="name" value="application server"> <label for="" id="">Management</label></div>
+          <div><input type="checkbox" name="name" value="license"> <label for="" id="">Ease Of Use</label></div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col col-left"><label for="" id="">Any comments?</label></div>
+        <div class="col col-right">
+          <textarea cols="50" rows="4">Enter your comment here...</textarea>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col"><button type="submit" class="btn btn-primary" id="submit">Submit</button></div>
+      </div>
+    </form>
+  </div>
 </body>
 </html>
